<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Strings -->
    <string name="app_name">MicPhone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_mic">Microphone Running</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="speaker">Join a speaker</string>
    <string name="pair">Pair</string>
    <string name="cancel">Cancel</string>
    <string name="divider">Divider</string>

    <!-- Strings for Settings -->
    <string name="settings_nothing_to_set_here">Nothing to set here :P</string>

    <!-- Strings for SpeakerActivity -->
    <string name="speaker_starting_speaker">Starting Speaker…</string>

    <!-- Strings for MicActivity -->
    <string name="mic_connected">Connected</string>
    <string name="mic_disconnect">Disconnect</string>
    <string name="mic_verify_disconnect">Are you 100% sure you want to disconnect?</string>
    <string name="mic_verify_yes">Yes</string>
    <string name="mic_verify_no">No</string>
    <string name="mic_icon">Microphone Icon</string>
    <string name="mic_connect_description">Simply speak into your phone\'s microphone.</string>
    <string name="mic_connecting">Connecting…</string>
    <string name="mic_connection_failed">Connection Failed</string>
    <string name="mic_check_connection">Please check your connection and try again.</string>

    <!-- Strings for Pairing Activity -->
    <string name="pairing_choice_nfc">Pair using NFC</string>
    <string name="pairing_choice_qr_code">Pair using QR Code</string>
    <string name="pairing_choice_manual">Pair Manually</string>
    <string name="title_activity_pairing">Pair with a Speaker</string>
    <string name="title_activity_nfc_pairing">Pair using NFC</string>
    <string name="title_activity_qr_code_pairing">Pair using QR Code</string>
    <string name="title_activity_manual_pairing">Pair Manually</string>
    <string name="pairing_title_nfc">NFC</string>
    <string name="pairing_title_qr_code">QR Code</string>
    <string name="pairing_title_manual">Manual</string>

    <!-- Strings for QR code pairing activity -->
    <string name="qr_code_not_an_ip_address">A QR code was detected, but is not a MicPhone QR code.</string>

    <!-- Strings for manual pairing fragment -->
    <string name="manual_pairing_not_an_ip_address">The value entered is not a valid IP address.</string>
    <string name="manual_pairing_ip_address_hint">192.168.43.1</string>

    <!-- Strings for Speaker activity -->
    <string name="title_activity_speaker">Speaker Running</string>
    <string name="start_speaker">Start Speaker</string>
    <string name="speaker_ip_address">Speaker IP Address</string>
    <string name="speaker_nfc_not_available">NFC is not available. To pair using NFC, first enable NFC.</string>
    <string name="speaker_network_unavailable">Network Unavailable</string>
    <string name="speaker_connect_to_wifi">Connect to a WiFi network to use this application.</string>
    <string name="speaker_settings">Settings…</string>
    <string name="speaker_qr_code">QR code</string>
    <string name="pairing_choice_nfc_description">To pair using NFC, simply tap your phone to the back of the phone acting as the speaker.</string>
    <string name="pairing_choice_qr_code_description">To pair using QR code, simply tap the button below and point the camera viewfinder at the QR code displayed by the speaker.</string>
    <string name="pairing_choice_manual_description">To pair manually, enter the IP address displayed by the speaker below.</string>
    <string name="speaker_disconnect">To disconnect, simply press the back button.</string>

</resources>
