<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="About"
        app:showAsAction="never"
        />

    // STUB
    // TO REMOVE BEFORE FINAL RELEASE
    <item
        android:id="@+id/action_mic"
        android:title="Mic"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_pairing"
        android:title="@string/title_activity_pairing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_speaker"
        android:title="@string/start_speaker"
        app:showAsAction="never" />

</menu>
