<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sg.edu.nus.micphone2.PairingActivity">
    
    <ViewPager
        android:id="@+id/pairing_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ViewPager>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairing_choice_nfc"
        android:id="@+id/pairing_choice_nfc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairing_choice_qr_code"
        android:id="@+id/pairing_choice_qr_code"
        android:layout_below="@+id/pairing_choice_nfc"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairing_choice_manual"
        android:id="@+id/pairing_choice_manual"
        android:layout_below="@+id/pairing_choice_qr_code"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
